# CS6340-Final-Project

./: .gitignore  CMakeLists.txt  GTK_simple_program.c  Makefile  README.md  env.sh
examples/: .gitignore
examples/helloworld/: helloworld.c
examples/simple/: GTK_simple_program.c  a.out
examples/two-button/: two-button.c
src/: CMakeLists.txt  analysis.cpp  detector.cpp  detector.h
svf-basics/: Makefile  case1.c  case2.c  case3.c
